--- a/publications/index.html
+++ b/publications/index.html
@@ -56,12 +56,12 @@
 				<a style="font-size: 21px; color: #428bca;">Publications and Patents</a>
 				<hr>
 <ol>
-	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
+	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” <b>IEEE International Symposium on Circuits and Systems (ISCAS), 2022</b></p></li>
 	
-	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a> (2019)</p></li>
+	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur. <a href="https://arxiv.org/pdf/1911.09371.pdf"> “Unlimited Dynamic Range Analog-to-Digital Conversion.” </a> <b>arXivpreprint arXiv:1911.09371</b> (2019)</p></li>
 	
-	<li><p>S C G Kiruba Daniel, Poojitha S Pai, <b>Hemanth Reddy Sabbella</b>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, “Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
-RNA detection using novelly synthesized gold nanoparticles.” IEEE Sensors Journal, 2022 </p></li>
+	<li><p>S C G Kiruba Daniel, Poojitha S Pai, <b>Hemanth Reddy Sabbella</b>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, <a href="https://ieeexplore.ieee.org/document/9854404">“Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
+		RNA detection using novelly synthesized gold nanoparticles.”</a> <b>IEEE Sensors Journal, 2022 </b></p></li>
 	
 	
 </ol>
@@ -70,7 +70,7 @@ RNA detection using novelly synthesized gold nanoparticles.” IEEE Sensors Jour
 				<hr>
 				
 				<ol>
-				<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
+				<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <b>Patent Application No – 201941043597</b></li>
 				</ol>
 	
 				<hr>
@@ -78,7 +78,7 @@ RNA detection using novelly synthesized gold nanoparticles.” IEEE Sensors Jour
 				<hr>
 				
 				<ol>
-				<li><p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.”  <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg"> tinyML Asia Technical Forum, 2021.</a></p></li>
+				<li><p><b>Hemanth Reddy Sabbella</b>, <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg"> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” </a> <b>tinyML Asia Technical Forum, 2021.</b></p></li>
 				</ol>
 </div>
 
