--- a/projects/index.html
+++ b/projects/index.html
@@ -170,7 +170,7 @@ div.desc {
 	  
 	</div>
 
-	<p  style="text-indent: 30px; color:#428bca; font-size:10px; float: right; margin-top: 300px;"><a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries">*Breakout Boards</a> & <a href="">Custom libraries</a></p>
+	<a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries">*Breakout Boards</a> & <a href="">Custom libraries</a>
 </div>
 
 
