--- a/projects/index.html
+++ b/projects/index.html
@@ -170,7 +170,7 @@ div.desc {
 	  
 	</div>
 
-	<a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries">*Breakout Boards</a> & <a href="">Custom libraries</a>
+	<!--<a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries">*Breakout Boards</a> & <a href="">Custom libraries</a>-->
 </div>
 
 
