--- a/projects/index.html
+++ b/projects/index.html
@@ -169,10 +169,10 @@ div.desc {
 	  
 	</div>
 
-	<a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries"></a>
+
 	
 </div>
-
+	</div>
 
   
 
