--- a/projects/index.html
+++ b/projects/index.html
@@ -64,7 +64,17 @@
  }
 
 div.gallery:hover {
-
+color: #0000;
+  background: 
+    linear-gradient(90deg,#1095c1 50%,#000 0) 
+    var(--_p,100%)/200% no-repeat;
+  -webkit-background-clip: text;
+          background-clip: text;
+  transition: .4s;
+}
+	
+.hover:hover {
+  --_p: 0%;
 }
 
 div.gallery img {
