--- a/projects/index.html
+++ b/projects/index.html
@@ -64,17 +64,23 @@
  }
 
 div.gallery:hover {
-color: #0000;
+--c: #1095c1; /* the color */
+
+  color: #0000;
   background: 
-    linear-gradient(90deg,#1095c1 50%,#000 0) 
-    var(--_p,100%)/200% no-repeat;
-  -webkit-background-clip: text;
-          background-clip: text;
-  transition: .4s;
+    linear-gradient(90deg, #fff 50%, var(--c) 0) calc(100% - var(--_p, 0%)) / 200%, 
+    linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) no-repeat,
+    var(--_c, #0000);
+  -webkit-background-clip: text, padding-box, padding-box;
+          background-clip: text, padding-box, padding-box;
+  transition: 0s, color .5s, background-color .5s;
 }
 	
 .hover:hover {
-  --_p: 0%;
+  color: #fff;
+  --_c: var(--c);
+  --_p: 100%;
+  transition: 0.5s, color 0s .5s, background-color 0s .5s;
 }
 
 div.gallery img {
