--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="row marketing">
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_new.jpg">
-	<p ><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a style="color:#428bca;">+65-88957273</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.s">hemanthrs</a><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
+	
 	<span itemprop="hashtags"> <p style="font-size: 10px; color:#428bca;"> #tinyML #lowpowersystems #embeddedelectronics #embeddedprogramming #hardwaredesign #realtimesystems #deployablesystems #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary</p> </span>	
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
@@ -65,7 +65,7 @@
 	<p>I work on hardware with specialisation in embedded systems, digital and analog circuits, and VLSI. I also like to code. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Currently, I am working on tinyML systems incorporating size-constrained ML models into low-power/battery-less embedded systems.</p>
 
 	<p> Apart from the above, I do photography [Featured on <a href="https://natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">natgeotravellerindia</a>], play guitar at times and eat a variety of food. </p>
-
+	<p ><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">hemanthrs@smu.edu.sg</a><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	
 	</div>
 </div>
