--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="row marketing">
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_new.jpg">
-	<p><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">hemanthrs@smu.edu.sg</a><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
+	<p><img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">Email</a><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
