--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="footer">
 	<div class="row">
 	<div class="col-sm-8">
-	<p><img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">Email</a><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
+	<img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">Email</a><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a>
 
 	<p><small></small></p>
 	
