--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <div class="row marketing">
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_new.jpg">
-	
+	<p><img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="width: 23px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">Email</a></p><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
+
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm <span itemprop="name">Hemanth Sabbella.</span> I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> in Electronics and Communications Engineering and am currently working as a Research Engineer under <a href ="https://sites.google.com/view/archan-misra">Prof. Archan Misra</a> at <a href="https://scis.smu.edu.sg/"> School of Computing and Information Systems</a>, <a href="https://www.smu.edu.sg/">Singapore Management University (SMU)</a>. Prior to it, I worked as Research Assistant at <span itemprop="affiliation">the <a href="https://labs.dese.iisc.ac.in/neuronics/">NeuRonICS Lab</a></span>,  <a href="https://www.iisc.ac.in/">Indian Institute of Science(IISc)</a></p>
@@ -74,7 +75,6 @@
 			<div class="footer">
 	<div class="row">
 	<div class="col-sm-8">
-	<img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="width: 25px; height: 25px;"><a href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@smu.edu.sg">Email</a><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a>
 
 	<p><small></small></p>
 	
