--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
 	<span itemprop="hashtags"> <p style="font-size: 14px; color:#428bca;"> #tinyML #lowpowersystems #embeddedelectronics #embeddedprogramming #hardwaredesign #realtimesystems #deployablesystems #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary</p> </span>	
 	</div>
 </div>
+<div class="row marketing">
+	<b>Highlights<b>
+</div>
 <!-- </div> -->
 
 			
