--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	</div>
 </div>
 <div class="row marketing">
-	<b>Highlights</b>
+	<b>Highlights:</b>
 		<ul>
 		  <li>04-2022: u-Bat has been planned to deploy for detecting timber logging Dehing Patkai National Park, Assam, India [IISc in collaboration with Wildlife Conservation Society (WCS), India]</li>
 		  <li>10-2019: All India Winning Team (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
