--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
-		  <li>04-2022: u-Bat has been planned to deploy for detecting timber logging Dehing Patkai National Park, Assam, India [IISc in collaboration with Wildlife Conservation Society (WCS), India]</li>
+			<li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging Dehing Patkai National Park, Assam, India [IISc in collaboration with Wildlife Conservation Society (WCS), India]</li>
 		  <li>10-2019: All India Winning Team (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
-		  <li>11-2019: Stand-out Applicant and Particant: Massachusetts Institute of Technology (MIT) Hacking Medicine, Grand Hack - 2019</li>
+		  <li>11-2019: Stand-out Applicant and Participant: Massachusetts Institute of Technology (MIT) Hacking Medicine, Grand Hack - 2019</li>
 		</ul>  
 </div>
 <!-- </div> -->
