--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 	<b>Highlights:</b>
 		<ul>
 			<li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging Dehing Patkai National Park, Assam, India [IISc in collaboration with Wildlife Conservation Society (WCS), India]</li>
+		   <li>11-2021: Video Poster got accepted at <a href="https://www.tinyml.org/event/asia-2021/">tinyML Asia Technical Forum, 2021</a></li>
 		  <li>10-2019: All India Winning Team (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
 		  <li>11-2019: Stand-out Applicant and Participant: Massachusetts Institute of Technology (MIT) Hacking Medicine, Grand Hack - 2019</li>
 		</ul>  
