--- a/publications/index.html
+++ b/publications/index.html
@@ -71,7 +71,7 @@
 				<hr>
 				
 				<ol>
-					<li><p>S C G Kiruba Daniel, Neeraja, <u>Hemanth R Sabbella</u>, Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” Patent Application No – 201941043597</li>
+					<li><p>[Published] S C G Kiruba Daniel, Neeraja, <u>Hemanth R Sabbella</u>, Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” Patent Application No – 201941043597</li>
 				</ol>
 	
 				<hr>
