--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	<p>I work on hardware with specialisation in embedded systems, digital and analog circuits, and VLSI. I also like to code. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Currently, I am working on tinyML systems incorporating size-constrained ML models into low-power/battery-less embedded systems.</p>
 
-	<p> Apart from the above, I do photography [Featured on <a href="https://natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">natgeotravellerindia</a>], play guitar at times and eat a variety of food. </p>
+	<p> Apart from the above, I do photography [Featured on <a href="https://natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">natgeotravellerindia</a>], go for ice-skating and eat a variety of food. </p>
 	
 	
 	</div>
