--- a/projects/index.html
+++ b/projects/index.html
@@ -100,6 +100,13 @@ div.desc {
 <div class="projects">
 
 	<div class="gallery">
+	  <a target="_blank" href=" ">
+	    <img src="/img/icomb.jpg" alt="Cinque Terre" width="600" height="400">
+	  </a>
+	  <div class="desc">iComb [on-going]</div>
+	</div>
+	
+	<div class="gallery">
 	  <a target="_blank" href="http://u-Bat.github.io/">
 	    <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="400">
 	  </a>
