--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
-	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a>
+	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
 		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a>
 		   <li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
 		   <li>01-2022: Our paper got accepted at <a href="https://ieeexplore.ieee.org/document/9937827">ISCAS 2022</a> [Flagship Conference of the IEEE CAS Society]</li>
