--- a/projects/index.html
+++ b/projects/index.html
@@ -101,7 +101,7 @@ div.desc {
 
 	<div class="gallery">
 	  <a target="_blank" href=" ">
-	    <img src="/img/icomb.jpg" alt="Cinque Terre" width="600" height="300">
+	    <img src="/img/icomb.JPG" alt="Cinque Terre" width="600" height="300">
 	  </a>
 	  <div class="desc">iComb [on-going]</div>
 	</div>
