--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<b>Highlights:</b>
 		<ul>
 	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
-		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a>
+		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a> [Impact factor: 4.3]
 		   <li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
 		   <li>01-2022: Our paper got accepted at <a href="https://ieeexplore.ieee.org/document/9937827">ISCAS 2022</a> [Flagship Conference of the IEEE CAS Society]</li>
 		   <li>11-2021: Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum, 2021</a></li>
