--- a/publications/index.html
+++ b/publications/index.html
@@ -57,7 +57,7 @@
 				<hr>
 				
 <ol>
-	<li><p>[Peer-reviewed] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
+	<li><p>[Peer-reviewed] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://arxiv.org/pdf/2305.03222.pdf">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
 	<li><p>[Peer-reviewed] <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
 	<li><p>[Peer-reviewed] S C G Kiruba Daniel, Poojitha S Pai, <u>Hemanth Reddy Sabbella</u>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, <a href="https://ieeexplore.ieee.org/document/9854404">“Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
