--- a/projects/index.html
+++ b/projects/index.html
@@ -105,6 +105,13 @@ div.desc {
 	  </a>
 	  <div class="desc">iComb [on-going]</div>
 	</div>
+
+	<div class="gallery">
+	  <a target="_blank" href=" ">
+	    <img src="/img/icomb.JPG" alt="Cinque Terre" width="600" height="300">
+	  </a>
+	  <div class="desc">Batteryles Audio Badge [on-going]</div>
+	</div>
 	
 	<div class="gallery">
 	  <a target="_blank" href="http://u-Bat.github.io/">
