--- a/projects/index.html
+++ b/projects/index.html
@@ -108,7 +108,7 @@ div.desc {
 
 	<div class="gallery">
 	  <a target="_blank" href=" ">
-	    <img src="/img/icomb.JPG" alt="Cinque Terre" width="600" height="300">
+	    <img src="/img/IMG_0242.jpeg" alt="Cinque Terre" width="600" height="300">
 	  </a>
 	  <div class="desc">Batteryles Audio Badge [on-going]</div>
 	</div>
