--- a/projects/index.html
+++ b/projects/index.html
@@ -110,7 +110,7 @@ div.desc {
 	  <a target="_blank" href=" ">
 	    <img src="/img/IMG_0242.jpeg" alt="Cinque Terre" width="600" height="300">
 	  </a>
-	  <div class="desc">Batteryles Audio Badge [on-going]</div>
+	  <div class="desc">Batteryless Audio Badge [on-going]</div>
 	</div>
 	
 	<div class="gallery">
