--- a/projects/index.html
+++ b/projects/index.html
@@ -100,10 +100,10 @@ div.desc {
 <div class="projects">
 
 	<div class="gallery">
-	  <a target="_blank" href=" ">
+	  <a target="_blank" href=" https://github.com/HemanthSabbella/Batteryless-AudioBadge">
 	    <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="300">
 	  </a>
-	  <div class="desc">Batteryless Audio Badge [on-going]</div>
+	  <div class="desc">BA<sup>2</sup>dge</div>
 	</div>
 	
 	<div class="gallery">
