--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<b>Highlights:</b>
 		<ul>
 		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
-		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNET 2024</a>
+		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNETS 2024</a>
 	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
 		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a> [Impact factor: 4.3]
 		   <li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
