--- a/publications/index.html
+++ b/publications/index.html
@@ -80,7 +80,7 @@
 				<hr>
 				
 				<ol>
-					<li><p> [Demo] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="">“Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge” </a> COMSNET, 2024</p></li>
+					<li><p> [Demo] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="">“Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge” </a> COMSNETS, 2024</p></li>
 
 					<li><p>[Video poster] <u>Hemanth Reddy Sabbella</u>, <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg"> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” </a> tinyML Asia Technical Forum, 2021.</p></li>
 				</ol>
