--- a/publications/index.html
+++ b/publications/index.html
@@ -57,7 +57,7 @@
 				<hr>
 				
 <ol>
-	<li><p>[Peer-reviewed] <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="">"BA<sup>2</sup>dge: Battery-less, Durable Audio Badge." </a> ACM PerCom, 2024</p></li>
+	<li><p>[Peer-reviewed] <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="">"BA<sup>2</sup>dge: Battery-less, Durable Audio Badge." </a> IEEE PerCom, 2024</p></li>
 	<li><p>[Peer-reviewed] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://dl.acm.org/doi/10.1145/3587819.3590986">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
 	<li><p>[Peer-reviewed] <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
