--- a/projects/index.html
+++ b/projects/index.html
@@ -103,7 +103,7 @@ div.desc {
 	  <a target="_blank" href=" https://github.com/HemanthSabbella/Batteryless-AudioBadge">
 	    <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="400">
 	  </a>
-	  <div class="desc">BA<sup>2</sup>dge</div>
+	  <div class="desc">PA2BLO</div>
 	</div>
 	
 	<div class="gallery">
