--- a/publications/index.html
+++ b/publications/index.html
@@ -72,7 +72,7 @@
 				<hr>
 				
 				<ol>
-					<li><p>[Published] S C G Kiruba Daniel, Neeraja, <u>Hemanth R Sabbella</u>, Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” Patent Application No – 201941043597</li>
+					<li><p>[Granted] S C G Kiruba Daniel, Neeraja, <u>Hemanth R Sabbella</u>, Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” IN Patent 528,512</li>
 				</ol>
 	
 				<hr>
