--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
-		   <li>03-2024: Patent on `Metal Nanoparticle Synthesis` is granted	
+		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
 		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
 		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNETS 2024</a> [Best Demo Award]
 	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
