--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
+		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
 		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
 		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
 		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNETS 2024</a> [Best Demo Award]
