--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;"> #tinyML #lowpower #wearables #realtime #deployable #lowcost #interdisciplinary #IoT #optimizations</p> </span>	
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p>Hi, I'm Hemanth Sabbella. I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering, and I am currently working as a Research Engineer under <a href ="https://sites.google.com/view/archan-misra">Prof. Archan Misra</a> at School of Computing and Information Systems, <a href="https://scis.smu.edu.sg/">Singapore Management University (SMU)</a>. Prior to that, I worked as Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science(IISc)</a> under <a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a></p>
+	<p>Hi, I'm Hemanth Sabbella. I am a first year PhD student at  <a href="https://computing.smu.edu.sg/"> School of Computing and Information Systems, Singapore Management University </a> advised by <a href ="https://sites.google.com/view/archan-misra">Prof. Archan Misra</a> (prior to it, worked as a Research Engineer). I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and also worked as a Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science(IISc)</a> under <a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a></p>
 
 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I also enjoy coding (C & Python). Currently, I am focused on tinyML systems, which involve incorporating size-constrained ML models into low-power wearables and embedded systems. </p>
 	<p>I am also quite open to integrating my expertise into cross-disciplinary fields, in that journey, I am exploring how robotic assistive systems and wearable control from humans form a strong match (like Ironman 3: Air Force One Attack).</p>
@@ -80,6 +80,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
+		   <li>08-2024: Joined as a Ph.D. student at SCIS, SMU 	
 		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
 		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
 		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
