--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
-		   <li>08-2024: Joined as a Ph.D. student at SCIS, SMU 	
+		   <li>08-2024: Joined as a Ph.D. student at <a href="https://computing.smu.edu.sg/phd/students"> SCIS, SMU </a>
 		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
 		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
 		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
