--- a/projects/index.html
+++ b/projects/index.html
@@ -100,7 +100,7 @@ div.desc {
 <div class="projects">
 
 	<div class="gallery">
-	  <a target="_blank" href=" https://github.com/HemanthSabbella/Batteryless-AudioBadge">
+	  <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
 	    <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="400">
 	  </a>
 	  <div class="desc">PA2BLO</div>
