--- a/publications/index.html
+++ b/publications/index.html
@@ -57,12 +57,12 @@
 				<hr>
 				
 <ol>
-	 <li><p>[Peer-reviewed][Core A] D Rathnayake, <u>H Sabbella</u>, M Radhakrishnan, A Misra, <a href="https://ink.library.smu.edu.sg/sis_research/9230/">"D2SR: Decentralized detection, de-synchronization, and recovery of LiDAR interference" </a> IEEE IROS, 2024</p></li>
-	<li><p>[Peer-reviewed][Core A*] <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="https://ieeexplore.ieee.org/abstract/document/10494427">"PA2BLO: Low-Power, Personalized Audio Badge." </a> IEEE PerCom, 2024</p></li>
-	<li><p>[Peer-reviewed] I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://dl.acm.org/doi/10.1145/3587819.3590986">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
-	<li><p>[Peer-reviewed] <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
+	 <li><p>[Core A] D Rathnayake, <u>H Sabbella</u>, M Radhakrishnan, A Misra, <a href="https://ink.library.smu.edu.sg/sis_research/9230/">"D2SR: Decentralized detection, de-synchronization, and recovery of LiDAR interference" </a> IEEE IROS, 2024</p></li>
+	<li><p>[Core A*] <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="https://ieeexplore.ieee.org/abstract/document/10494427">"PA2BLO: Low-Power, Personalized Audio Badge." </a> IEEE PerCom, 2024</p></li>
+	<li><p> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://dl.acm.org/doi/10.1145/3587819.3590986">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
+	<li><p>[CAS Flagship Conference] <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
-	<li><p>[Peer-reviewed] S C G Kiruba Daniel, Poojitha S Pai, <u>Hemanth Reddy Sabbella</u>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, <a href="https://ieeexplore.ieee.org/document/9854404">“Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
+	<li><p>[Impact Factor: 4.3] S C G Kiruba Daniel, Poojitha S Pai, <u>Hemanth Reddy Sabbella</u>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, <a href="https://ieeexplore.ieee.org/document/9854404">“Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
 		RNA detection using novelly synthesized gold nanoparticles.”</a> IEEE Sensors Journal, 2022</p></li>
 	<li><p>[Pre-print] Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <u>Hemanth Reddy Sabbella</u>, Chandra Sekhar Seela-mantula, and Chetan Singh Thakur. <a href="https://arxiv.org/pdf/1911.09371.pdf"> “Unlimited Dynamic Range Analog-to-Digital Conversion.” </a>arXivpreprint arXiv:1911.09371 (2019)</p></li>
 	
