--- a/publications/index.html
+++ b/publications/index.html
@@ -65,8 +65,8 @@
 				<hr>
 				
 <ol>
-	 <li><p> <span class="orange-background">[Core A]</span> D Rathnayake, <u>H Sabbella</u>, M Radhakrishnan, A Misra, <a href="https://ink.library.smu.edu.sg/sis_research/9230/">"D2SR: Decentralized detection, de-synchronization, and recovery of LiDAR interference" </a> IEEE IROS, 2024</p></li>
-	<li><p> <span class="orange-background">[Core A*</span> <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="https://ieeexplore.ieee.org/abstract/document/10494427">"PA2BLO: Low-Power, Personalized Audio Badge." </a> IEEE PerCom, 2024</p></li>
+	 <li><p> <span class="orange-background">[A Conference]</span> D Rathnayake, <u>H Sabbella</u>, M Radhakrishnan, A Misra, <a href="https://ink.library.smu.edu.sg/sis_research/9230/">"D2SR: Decentralized detection, de-synchronization, and recovery of LiDAR interference" </a> IEEE IROS, 2024</p></li>
+	<li><p> <span class="orange-background">[A* Conference]</span> <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="https://ieeexplore.ieee.org/abstract/document/10494427">"PA2BLO: Low-Power, Personalized Audio Badge." </a> IEEE PerCom, 2024</p></li>
 	<li><p> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://dl.acm.org/doi/10.1145/3587819.3590986">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems (MMSys), 2023</p></li>
 	<li><p> <span class="orange-background">[CAS Flagship Conference]</span> <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
