--- a/publications/index.html
+++ b/publications/index.html
@@ -61,7 +61,7 @@
 
 			
 			<div class="publications">
-				<a style="font-size: 21px; color: #428bca;">Publications: Conferences & Journals</a>
+				<a style="font-size: 21px; color: #428bca;">Conferences & Journals</a>
 				<hr>
 				
 <ol>
