--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		   <li>08-2024: Joined as a Ph.D. student at <a href="https://computing.smu.edu.sg/phd/students"> SCIS, SMU </a>
 		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
 		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
-		   <li>12-2023: Full paper got accepted at <a href="https://www.percom.org/call-for-papers/">PerCom 2024 </a> [Acceptance rate: 14.5%]
+		   <li>12-2023: Full paper got accepted at <a href="https://percom.org/2024/">PerCom 2024 </a> [Acceptance rate: 14.5%]
 		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNETS 2024</a> [Best Demo Award]
 	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
 		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a> [Impact factor: 4.3]
