--- a/publications/index.html
+++ b/publications/index.html
@@ -77,14 +77,17 @@
 	
 </ol>
 	<hr>
-<!-- 			<a style="font-size: 21px; color: #428bca;">Workshop</a>
+		<a style="font-size: 21px; color: #428bca;">Workshops</a>
 			<hr>
 			
 			<ol>
-				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> S C G Kiruba Daniel, Neeraja, <u>Hemanth R Sabbella</u>, Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” IN Patent 528,512</li>
+				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> <u>Hemanth Sabbella</u>, Archit Mukherjee, Tan Jeck Chuang, Hong Yee Low, Dong Ma, Archan Misra <a href="">"Improving the Responsiveness of Fall Detection using Spiking Neural Networks
+" </a> IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops)
+, 2025</p></li>
+
 			</ol>
 
-			<hr> -->
+			<hr>
 			
 			<a style="font-size: 21px; color: #428bca;">Demos & Posters</a>
 				<hr>
