--- a/publications/index.html
+++ b/publications/index.html
@@ -72,8 +72,8 @@
 	
 	<li><p> <span class="orange-background">[Sensors'22]</span> S C G Kiruba Daniel, Poojitha S Pai, <u>Hemanth Reddy Sabbella</u>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, <a href="https://ieeexplore.ieee.org/document/9854404">“Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
 		RNA detection using novelly synthesized gold nanoparticles.”</a> IEEE Sensors Journal, 2022</p></li>
-	<li><p> <span class="orange-background">[Preprint]</span> Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <u>Hemanth Reddy Sabbella</u>, Chandra Sekhar Seela-mantula, and Chetan Singh Thakur. <a href="https://arxiv.org/pdf/1911.09371.pdf"> “Unlimited Dynamic Range Analog-to-Digital Conversion.” </a>arXivpreprint arXiv:1911.09371 (2019)</p></li>
-	
+<!-- 	<li><p> <span class="orange-background">[Preprint]</span> Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <u>Hemanth Reddy Sabbella</u>, Chandra Sekhar Seela-mantula, and Chetan Singh Thakur. <a href="https://arxiv.org/pdf/1911.09371.pdf"> “Unlimited Dynamic Range Analog-to-Digital Conversion.” </a>arXivpreprint arXiv:1911.09371 (2019)</p></li>
+	 -->
 	
 </ol>
 	<hr>
@@ -81,7 +81,7 @@
 			<hr>
 			
 			<ol>
-				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> <u>Hemanth Sabbella</u>, Archit Mukherjee, Tan Jeck Chuang, Hong Yee Low, Dong Ma, Archan Misra <a href="">"Improving the Responsiveness of Fall Detection using Spiking Neural Networks
+				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> <u>H Sabbella</u>, A Mukherjee, T Jeck Chuang, H Yee Low, D Ma, A Misra <a href="">"Improving the Responsiveness of Fall Detection using Spiking Neural Networks
 " </a> IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops)
 , 2025</p></li>
 
