--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
+		   <li>05-2025: Started as a Visiting Student at <a href="https://smart.mit.edu/">Singapore-MIT Alliance for Research and Technology Center </a> with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
 		   <li>01-2025: Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25"> CoMoRea'25 </a> collocated with <a href="https://www.percom.org/call-for-papers/">PerCom 2025</a>
 		   <li>08-2024: Joined as a Ph.D. student at <a href="https://computing.smu.edu.sg/phd/students"> SCIS, SMU </a>
 		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
