--- a/publications/index.html
+++ b/publications/index.html
@@ -81,7 +81,7 @@
 			<hr>
 			
 			<ol>
-				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> <u>H Sabbella</u>, A Mukherjee, T Jeck Chuang, H Yee Low, D Ma, A Misra <a href="">"Improving the Responsiveness of Fall Detection using Spiking Neural Networks
+				<li><p> <span class="orange-background">[CoMoRea, PerCom'25]</span> <u>H Sabbella*</u>, A Mukherjee*, T Jeck Chuang, H Yee Low, D Ma, A Misra <a href="">"Improving the Responsiveness of Fall Detection using Spiking Neural Networks
 " </a> IEEE International Conference on Pervasive Computing and Communications Workshops and other Affiliated Events (PerCom Workshops)
 , 2025</p></li>
 
