--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p
 	<p> In addition to my professional pursuits, I have a passion for photography (you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy going ice-skating, and have a diverse palette when it comes to food.
-	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> clickbait? </a> </p>
+	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> hemanth who? </a> </p>
 
 
 
