--- a/publications/index.html
+++ b/publications/index.html
@@ -36,7 +36,7 @@
 
 	 <style>
         .orange-background {
-            background-color: DodgerBlue;
+            background-color: #81de76;
             color: white;
             padding: 1px;
         }
