--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,16 @@
 				<hr>
 				
 <ol>
-	 <li><p> <b><span class="orange-background">[IROS'24]</span></b> D Rathnayake, <u>H Sabbella</u>, M Radhakrishnan, A Misra, <a href="https://ink.library.smu.edu.sg/sis_research/9230/">"D2SR: Decentralized detection, de-synchronization, and recovery of LiDAR interference" </a> IEEE International Conference on Intelligent Robots and Systems, 2024</p></li>
+	<li>
+	  <p>
+	    <strong><span style="background-color: orange;">[IROS 2024]</span></strong>
+	    D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
+	    <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
+	      "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference"
+	    </a>,
+	    <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2024.
+	  </p>
+	</li>
 	<li><p> <span class="orange-background">[PerCom'24]</span> <u>H Sabbella</u>, D Sanjaya Weerakoon, M Gulati, A Misra, <a href="https://ieeexplore.ieee.org/abstract/document/10494427">"PA2BLO: Low-Power, Personalized Audio Badge." </a> IEEE International Conference on Pervasive Computing and Communications, 2024</p></li>
 	<li><p> <span class="orange-background">[MMSys'23]</span> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra, <a href="https://dl.acm.org/doi/10.1145/3587819.3590986">“MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams.” </a> ACM Multimedia Systems, 2023</p></li>
 	<li><p> <span class="orange-background">[ISCAS'22]</span> <u>H.R. Sabbella</u>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, <a href="https://ieeexplore.ieee.org/document/9937827">“An Always-On tinyML Acoustic Classifier for Ecological Applications.” </a> IEEE International Symposium on Circuits and Systems, 2022</p></li>
