--- a/publications/index.html
+++ b/publications/index.html
@@ -67,7 +67,7 @@
 <ol>
 	<li>
 	  <p>
-	    <strong><span style="background-color: orange;">[IROS 2024]</span></strong>
+	    <strong><span style="background-color: orange;">[IROS'24]</span></strong>
 	    D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
 	    <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
 	      "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference"
