--- a/publications/index.html
+++ b/publications/index.html
@@ -69,8 +69,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[IROS'24]</span>
         D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
         <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
-          "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference"
-        </a>,
+          "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
+        </a>
         <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2024.
       </p>
     </li>
@@ -79,8 +79,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[PerCom'24]</span>
         <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
         <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
-          "PA2BLO: Low-Power, Personalized Audio Badge"
-        </a>,
+          "PA2BLO: Low-Power, Personalized Audio Badge",
+        </a>
         <em>IEEE International Conference on Pervasive Computing and Communications (PerCom)</em>, 2024.
       </p>
     </li>
@@ -89,8 +89,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[MMSys'23]</span>
         I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
         <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
-          "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams"
-        </a>,
+          "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
+        </a>
         <em>ACM Multimedia Systems (MMSys)</em>, 2023.
       </p>
     </li>
@@ -99,8 +99,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[ISCAS'22]</span>
         <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
         <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
-          "An Always-On tinyML Acoustic Classifier for Ecological Applications"
-        </a>,
+          "An Always-On tinyML Acoustic Classifier for Ecological Applications",
+        </a>
         <em>IEEE International Symposium on Circuits and Systems (ISCAS)</em>, 2022.
       </p>
     </li>
@@ -109,8 +109,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Sensors'22]</span>
         S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
         <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
-          "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles"
-        </a>,
+          "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
+        </a>
         <em>IEEE Sensors Journal</em>, 2022.
       </p>
     </li>
@@ -126,8 +126,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span>
         <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
         <a href="#" target="_blank">
-          "Improving the Responsiveness of Fall Detection using Spiking Neural Networks"
-        </a>,
+          "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
+        </a>
         <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
       </p>
     </li>
@@ -143,8 +143,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[COMSNETS'24]</span>
         I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
         <a href="#" target="_blank">
-          "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge"
-        </a>,
+          "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
+        </a>
         <em>International Conference on COMmunication Systems & NETworkS (COMSNETS)</em>, 2024.
       </p>
     </li>
@@ -153,8 +153,8 @@
         <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[tinyML Forum'21]</span>
         <u>Hemanth Reddy Sabbella</u>,
         <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
-          "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights"
-        </a>,
+          "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
+        </a>
         <em>tinyML Asia Technical Forum</em>, 2021.
       </p>
     </li>
