--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 	<p>Hi, I'm Hemanth Sabbella. I am a first year PhD student at  School of Computing and Information Systems, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by <a href ="https://sites.google.com/view/archan-misra">Prof. Archan Misra</a> (Funded by <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> and MoE). Prior to it, worked as a Research Engineer at SMU. I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and also worked as a Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under <a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a></p>
 
 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p
-	<p> In addition to my professional pursuits, I have a passion for photography (you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy going ice-skating, and have a diverse palette when it comes to food.
-	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> hemanth who? </a> </p>
+	<p> In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy reading non-fiction, and have a diverse palette when it comes to food.
+<!-- 	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> hemanth who? </a> </p> -->
 
 
 
