--- a/index.html
+++ b/index.html
@@ -59,10 +59,16 @@
 	<p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="mailto:shrsabbella.2024@phdcs.smu.edu.sg">Email</a></p>
 	<p><img src="https://img.icons8.com/ios-filled/344/linkedin-2--v1.png" style="margin-left:35px; width: 23px; height: 23px;"><a style="margin-left:5px;" href="https://www.linkedin.com/in/hemanthsabbella/">LinkedIn</a></p>
 	<p><img src="https://img.icons8.com/material-two-tone/344/google-scholar.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
-	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">   #wearables  #lowpowersystems #tinyML #neuromorphic #IoT #ubiquitouscomputing </p> </span>	
+	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">  #neuromorphic  #wearables #lowpowersystems #tinyML #IoT #ubiquitouscomputing </p> </span>	
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p>Hi, I'm Hemanth Sabbella. I am a first year PhD student at  School of Computing and Information Systems, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by <a href ="https://sites.google.com/view/archan-misra">Prof. Archan Misra</a> (Funded by <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> and MoE). Prior to it, worked as a Research Engineer at SMU. I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and also worked as a Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under <a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a></p>
+	<p>Hi, I'm Hemanth Sabbella. I am a first year PhD student at  School of Computing and Information Systems, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
+<!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
+		Prof. Archan Misra. Currently a Visiting Student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> </p>
+<!-- 		(Funded by Singapore-MIT alliance and MoE) -->
+	<p>Prior to it, worked as a Research Engineer at SMU. I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and also worked as a Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur
+<!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
+	</p>
 
 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p
 	<p> In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy reading non-fiction, and have a diverse palette when it comes to food.
