--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">  #neuromorphic  #wearables #lowpowersystems #tinyML #IoT #ubiquitouscomputing </p> </span>	
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
-	<p>Hi, I'm Hemanth Sabbella. I am a first year PhD student at  School of Computing and Information Systems, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
+	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
-		Prof. Archan Misra. Currently a Visiting Student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> </p>
+		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> </p>
 <!-- 		(Funded by Singapore-MIT alliance and MoE) -->
-	<p>Prior to it, worked as a Research Engineer at SMU. I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and also worked as a Research Assistant at the NeuRonICS Lab, <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur
+	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and worked as a Senior Research Assistant at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
 <!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
 	</p>
 
