--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
-		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance</a> </p>
+		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance.</a> </p>
 <!-- 		(Funded by Singapore-MIT alliance and MoE) -->
-	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering and worked as a Senior Research Assistant at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
+	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. I previously worked as a Senior Research Assistant at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
 <!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
 	</p>
-
-	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p
+	<p>I specialize in deep learning for MCUs (tinyML),  low-power embedded systems, digital and analog circuits . My current research interlinks neuromorphic computing (SNNs), ultra-low-power hardware/firmware design, and soft knitted wearables, while also exploring their integration into ubiquitous and robotic applications.</p>
+<!-- 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p -->
 	<p> In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy reading non-fiction, and have a diverse palette when it comes to food.
 <!-- 	<p style="font-size: 7px;"> <a href="https://g.co/kgs/MDcZQG9"> hemanth who? </a> </p> -->
 
