--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
 <div class="row marketing">
 	<b>Highlights:</b>
 		<ul>
-		   <li>05-2025: Started as a Visiting Student at <a href="https://smart.mit.edu/">Singapore-MIT Alliance for Research and Technology Center </a> with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
-		   <li>01-2025: Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25"> CoMoRea'25 </a> collocated with <a href="https://www.percom.org/call-for-papers/">PerCom 2025</a>
-		   <li>08-2024: Joined as a Ph.D. student at <a href="https://computing.smu.edu.sg/phd/students"> SCIS, SMU </a>
-		   <li>07-2024: Our paper 'D2SR' got accepted in <a href="https://iros2024-abudhabi.org/"> IROS 2024 </a>  
+		   <li>05-2025: Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
+		   <li>01-2025: Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers"> CoMoRea'25 </a> collocated with PerCom 2025
+		   <li>08-2024: Joined as a Ph.D. student at SCIS, SMU
+		   <li>07-2024: Our paper 'D2SR' got accepted in IROS 2024  
 		   <li>03-2024: Patent on `Metal Nanoparticles Synthesis` is granted	
-		   <li>12-2023: Full paper got accepted at <a href="https://percom.org/2024/">PerCom 2024 </a> [Acceptance rate: 14.5%]
-		   <li>12-2023: Demo paper got accepted at <a href="https://www.comsnets.org/demos_exhibits.html">COMSNETS 2024</a> [Best Demo Award]
-	           <li>03-2023: A conference paper I co-authered got accepted at <a href="https://2023.acmmmsys.org/">ACM MMSys 2023</a> [Acceptance rate: 25%]
-		   <li>07-2022: Journel paper got accepted at <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=7361">IEEE Sensors Journel</a> [Impact factor: 4.3]
-		   <li>04-2022: <a href="https://u-bat.github.io/">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
-		   <li>01-2022: Our paper got accepted at <a href="https://ieeexplore.ieee.org/document/9937827">ISCAS 2022</a> [Flagship Conference of the IEEE CAS Society]</li>
+		   <li>12-2023: Full paper got accepted at <a href="https://percom.org/2024/full-program/">PerCom 2024 </a> [Acceptance rate: 14.5%]
+		   <li>12-2023: Demo paper got accepted at COMSNETS 2024 [Best Demo Award]
+	           <li>03-2023: A conference paper I co-authered got accepted at ACM MMSys 2023 [Acceptance rate: 25%]
+		   <li>07-2022: Journel paper got accepted at IEEE Sensors Journel [Impact factor: 4.3]
+		   <li>04-2022: <a href="https://u-bat.github.io/deployment">u-Bat</a> has been planned to deploy for detecting timber logging at Dehing Patkai National Park, Assam, India [IISc, India in collaboration with Wildlife Conservation Society (WCS), India]</li>
+		   <li>01-2022: Our paper got accepted at ISCAS 2022 [Flagship Conference of the IEEE CAS Society]</li>
 		   <li>11-2021: Video Poster got accepted at <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum, 2021</a></li>
-		   <li>11-2019: Selected for  <a href="https://grandhack.mit.edu/boston/">Massachusetts Institute of Technology (MIT) Hacking Medicine</a>, Grand Hack - 2019, USA</li>
+		   <li>11-2019: Selected for  <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">Massachusetts Institute of Technology (MIT) Hacking Medicine</a>, Grand Hack - 2019, USA</li>
 		   <li>10-2019: <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">All India Winning Team</a> (won 5000 USD) - Hackware 2019, A Schneider Electric Innovation Challenge</li>
 		</ul>  
 </div>
