--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<p><img src="https://img.icons8.com/material-two-tone/344/google-scholar.png" style="margin-left:35px; width: 25px; height: 25px"><a style="margin-left:5px;" href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	<span itemprop="hashtags"> <p style="margin-top:20px; text-align: center; font-size: 14px; color:#428bca;">  #neuromorphic  #wearables #lowpowersystems #tinyML #IoT #ubiquitouscomputing </p> </span>	
 	</div>
-	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
+	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8" style="text-align: justify;">
 	<p>Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS, <a href="https://computing.smu.edu.sg/"> Singapore Management University (SMU)</a> advised by 
 <!-- 		<a href ="https://sites.google.com/view/archan-misra"></a>  -->
 		Prof. Archan Misra and Prof. Dong Ma. Currently a visiting student at <a href="https://m3s.mit.edu/our-team/hemant-sebbal">Singapore-MIT alliance.</a> </p>
@@ -69,7 +69,7 @@
 	<p>I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> with a degree in Electronics and Communications Engineering. Previously, I worked as a Senior Research Assistant at <a href="https://www.iisc.ac.in/">Indian Institute of Science (IISc)</a> under Prof. Chetan Singh Thakur, followed by Research Engineer at SMU.
 <!-- 		<a href="https://labs.dese.iisc.ac.in/neuronics/people/">Prof. Chetan Singh Thakur</a> -->
 	</p>
-		<p>I specialize in deep learning for MCUs (tinyML),  low-power embedded systems, digital and analog circuits . My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable sensing systems, and resource-constrained models, exploring their integration into ubiquitous and robotic applications.
+		<p>I specialize in deep learning for MCUs (tinyML),  low-power embedded systems, digital and analog circuits. My current research broadly encompasses neuromorphic computing (SNNs), low-power wearable sensing systems, and resource-constrained models, exploring their integration into ubiquitous and robotic applications.
 		</p>
 <!-- 	<p>I specialize in embedded systems, digital and analog circuits, and machine/deep learning for MCUs. I have been working on tinyML systems, which involve incorporating size-constrained ML models into ultra-low-power wearables and embedded systems. Specifically, my current research interlinks event-driven/neuromorphic computing (SNNs), ultra-low-power hardware design, and soft knitted wearables (like knee braces), while also exploring their integration into robotic applications </p -->
 	<p> In addition to my professional pursuits, I have a passion for photography (Featured in natgeo, you can check out my work <a href="https://www.instagram.com/foto.obscura/">@foto.obscura</a>), enjoy reading non-fiction, and have a diverse palette when it comes to food.
