--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	</div>
 </div>
 <div class="row marketing">
-	<b>Highlights:</b>
+  <b style="font-size: 21px; color: #428bca;">Highlights:</b>
 		<ul>
 		   <li>05-2025: Started as a Visiting Student at Singapore-MIT Alliance for Research and Technology Center with <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
 		   <li>01-2025: Workshop paper got accepted at <a href="https://sites.google.com/view/comorea25/accepted-papers"> CoMoRea'25 </a> collocated with PerCom 2025
